<resources>
    <string name="app_name">CheatScale</string>
    <string name="identifier_une_tonalit">Identifier une tonalité</string>
    <string name="accordeur">Accordeur</string>
    <string name="m_tronome">Métronome</string>
    <string name="logo_cheatscales">logo_cheatscales</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="start">start</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="jouez_une_note">Jouez une note</string>
    <string name="gamme_5">GAMME 5</string>
    <string name="gamme_6">GAMME 6</string>
    <string name="gamme_4">GAMME 4</string>
    <string name="gamme_3">GAMME 3</string>
    <string name="gamme_2">GAMME 2</string>
    <string name="ecoute_en_cours">Ecoute en cours</string>
    <string name="tonalit_s_compatibles">Tonalités compatibles :</string>
    <string name="gamme_1">GAMME 1</string>
    <string name="todo">TODO</string>
    <string name="title_activity_infos_gamme">InfosGamme</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>